fix: button mobile

--- a/website/css/post-styles.css
+++ b/website/css/post-styles.css
@@ -89,11 +89,12 @@ figure img {
 .button-container p {
     display: flex;
     justify-content: space-around;
-    /*! position: ; */
-    margin: 0;
+    margin: 0 auto;
     padding: 2em 0;
     width: 100%;
     gap: 7%;
+    width: min(100%, 600px);
+    font-size: 1em;
 }
 
 
